--- a/assets/css/scroll.css
+++ b/assets/css/scroll.css
@@ -3,11 +3,9 @@
   margin: 20px auto;
   padding: 50px 0;
   width: 100%;
-  max-width: 1000px;
 }
 
 .timeline::before {
-  z-index: 1;
   top: 0;
   content: '';
   position: absolute;
@@ -24,7 +22,6 @@
   width: 50%;
   padding: 20px 40px;
   box-sizing: border-box;
-  z-index: 2;
 }
 
 .milestone:nth-child(odd) {
@@ -44,12 +41,13 @@
 .milestone::before {
   content: '';
   position: absolute;
+  top: 50%;
+  left: 50%;
   width: 12px;
   height: 12px;
   background-color: #3498db;
   border-radius: 50%;
   transform: translate(-50%, -50%);
-  z-index: 3;
 }
 
 .milestone:nth-child(odd)::before {
@@ -70,4 +68,7 @@
 .milestone.visible {
   opacity: 1;
   transform: translateY(0);
+}
+@media (max-width: 768px) {
+  
 }
